<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory  android:title="@string/settings">
    <CheckBoxPreference
            android:key="useAccelerometer"
            android:title="@string/use_accelerometer"
            android:summary="@string/use_accelerometer_summary"
            android:defaultValue="false"
            >
    </CheckBoxPreference>
    <CheckBoxPreference
            android:key="useEyeglass"
            android:title="@string/use_eyeglass"
            android:summary="@string/use_eyeglass_summary"
            android:defaultValue="false"
            >
    </CheckBoxPreference>
    <ListPreference
            android:key="oscillationMode"
            android:title="@string/oscillation_mode"
            android:summary="@string/oscillation_mode_summary"
            android:dialogTitle="@string/oscillation_mode_dialogtitle"
            android:entries="@array/oscillation_mode_entries"
            android:entryValues="@array/oscillation_mode_entryvalues"
            android:defaultValue="1" />
</PreferenceCategory>
</PreferenceScreen>